@@ -1,4 +1,8 @@
 2009-11-03  Miguel de Dios <miguel.dedios@artica.es>
+	* godmode/users/configure_user.php: fix to set the admin user when
+	you create new user.
+
+2009-11-03  Miguel de Dios <miguel.dedios@artica.es>
 	* DEBIAN/make_deb_package.sh: move the script to make the deb package into
 	the DEBIAN and change some things into the sourcecode for the directory
 	change.
